--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
+  "version": 2,
   "buildCommand": "next build",
   "devCommand": "next dev",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "rootDirectory": ".",
+  "public": false
 }
