--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "csstype": "^3.1.3",
+    "lucide-react": "^0.542.0",
     "next": "^15.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
