--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "version": 2,
+  "framework": "nextjs",
   "buildCommand": "next build",
   "devCommand": "next dev",
-  "outputDirectory": ".next",
-  "rootDirectory": ".",
-  "public": false
+  "installCommand": "npm install"
 }
